2/24/2013
---------------------------
- KO Changed log file deletion so that it will gracefully handle deletion failures


2/17/2013
---------------------------
- KO Changed setup.py on Windows to explicitly include .pyd files that py2exe seems not to detect

2/10/2013
---------------------------
- KO Changed the log file location to go somewhere the app always has write access to
- KO Changed setup.py to always delete the previous build first and include wx.lib.pubsub
- KO Fixed #493 (Unable to adjust "Depth Tolerance Chceck [sic] for Duplicate Points" Values)
- KO Fixed #452 (PyDeadObject errors when opening Merge Duplicate Points dialog multiple times)
- KO Fixed #482 (Hard to select a point with a line segment)

1/20/2013
---------------------------
- KO Fixed #487 (Save Image)
- KO Marked #437 (Allow loading a verdat with no boundaries) as fixed
- KO Marked #156 (Preference setting to change format of lat/long display) as fixed
- KO Changed save behavior to save to existing file rather than prompting
- KO Fixed #470 (Label Positions Relative to Soundings Overlap (Sometimes...))

1/19/2013
---------------------------
- KO Fixed #478 (verdat deleted when save fails)
- KO Fixed #480 (Selected points should be highlighted)